# ColmeIA-EmbarcaTech

./: .gitignore  ApiSSense.cpp  CMakeLists.txt  ColmeIA-EmbarcaTech.c  README.md
lib/: AED.c  AED.h  HX711.cpp  HX711.h  MCP23017.c  MCP23017.cpp  MCP23017.h  MqttClient.cpp  MqttClient.h  hx711.pio
lib/SGP40/: CMakeLists.txt  sensirion_i2c_hal.c
